clean up project to prepare first deploy
